testsuite/tests/checks/membership_tests/test.out
membership.adb:3:7: error: membership test
3 |    if S in 1 .. 5 | 9 then      --  FLAG
  |       ^^^^^^^^^^^^^^^ 

